# ubs-bot

./: CHANGELOG.md  Cargo.toml  README.md
migrations/: 20230814012008_watchers.sql  20230814031744_base.sql  20230814032049_new.sql
src/: cache.rs  main.rs  notifier.rs  watcher.rs
src/commands/: about.rs  class.rs  general.rs  mod.rs
