[package]
name = "ubs-bot"
version = "0.1.0"
edition = "2021"
authors = ["ok-nick <nick.libraries@gmail.com>"]
description = "real-time notifications for University at Buffalo class opening and closings through Discord"
repository = "https://github.com/ok-nick/ubs-bot"
documentation = "https://docs.rs/ubs-bot"
license = "MIT"
readme = "README.md"

[dependencies]
# ubs-lib = "0.1.1"
ubs-lib = { git = "https://github.com/ok-nick/ubs", features = [
  "serde_support",
] }
serenity = { version = "0.11.6", features = ["framework"] }
tracing = "0.1.37"
tokio = { version = "1.29.1", features = [
  "rt-multi-thread",
  "signal",
  "macros",
], default-features = false }
sqlx = { version = "0.7.1", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "json",
] }
thiserror = "1.0.44"
